testsuite/tests/typecheck/should_fail/T10194.stderr

T10194.hs:7:8: error:
    • Cannot instantiate unification variable ‘b0’
      with a type involving polytypes: X
        GHC doesn't yet support impredicative polymorphism
    • In the expression: (.)
      In an equation for ‘comp’: comp = (.)
